--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 remote_theme: pages-themes/modernist@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
+title: [The title of your site]
+description: [A short description of your site's purpose]
+relative_links:
+  enabled: true
+  collections: true
+include:
+  - index.md
+  - README.md
