--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: pages-themes/modernist@v0.2.0
+remote_theme: granbom/jekyll-theme-bootstrap4-navbar-cdn
 plugins:
   - jekyll-remote-theme
 title: [The title of your site]
